--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,4 +3,24 @@
   margin: 0;
   padding: 0;
 }
+ .reservationBtn{
+    padding: 0.5rem 1rem;
+    border-radius: 0.375rem;
+    border: 1px solid #000;
+    background-color: #fff;
+    color: black;
+    font-size: 0.875rem;
+    transition: box-shadow 0.2s ease;
+    margin-right: 10px;
+    margin: 4px;
+    width: 10rem;
+ }
 
+ .reservationBtn.selected {
+  background-color: black;
+  color: white;
+}
+
+.reservationBtn:hover {
+  box-shadow: 4px 4px 0px 0px rgba(0, 0, 0, 1);
+}
