--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,25 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+/* Navbar styling */
+
+.nav-link {
+  margin-right: 15px; /* Adjust spacing as needed */
+}
+
+.navbar {
+  height: 5rem;
+}
+
+.dropdown-toggle:focus {
+  border: none !important; /* Preserve the button appearance */
+}
+/* Navbar styling */
+
+/* Post Modal styling */
  .reservationBtn{
     padding: 0.5rem 1rem;
     border-radius: 0.375rem;
@@ -28,3 +46,5 @@
 h4 {
   text-align: center;
 }
+
+/* Post Modal styling */
