--- a/frontend/src/css/Users.css
+++ b/frontend/src/css/Users.css
@@ -1,7 +1,6 @@
 .profile-image-container {
-  width: 200px; /* Adjust the width as needed */
-  height: 200px; /* Adjust the height as needed */
-  border-radius: 50%;
+  width: 200px; 
+  /* height: 250px;  */
   margin: 0 auto;
 }
 
