--- a/frontend/src/css/Users.css
+++ b/frontend/src/css/Users.css
@@ -39,6 +39,7 @@
   margin-right: 3rem;
   border-radius: 30px;
   text-align: center;
+  max-height: 30rem;
   box-shadow: 
   1px 1px rgba(0,0,0,0.2),
   2px 2px rgba(0,0,0,0.2),
@@ -72,6 +73,12 @@
   background-color: #ffa500;
 }
 
-.usersPost {
+.userPostContainer {
   margin: 1rem;
+}
+
+
+.size {
+  width: 25rem;
+  margin: 1;
 }
