--- a/frontend/src/css/Posts.css
+++ b/frontend/src/css/Posts.css
@@ -52,6 +52,12 @@
   height: 80vh;
 }
 
+.img-fluid {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
 /* Post Modal styling */
 .reservationBtn{
   padding: 0.5rem 1rem;
