--- a/frontend/src/css/Posts.css
+++ b/frontend/src/css/Posts.css
@@ -58,6 +58,14 @@
   object-fit: cover;
 }
 
+.reservationForm {
+  display: inline-block;
+  margin: 0; /* Reset margin */
+  padding: 0; /* Reset padding */
+  width: fit-content;
+}
+
+
 /* Post Modal styling */
 .reservationBtn{
   padding: 0.5rem 1rem;
