--- a/frontend/src/css/Posts.css
+++ b/frontend/src/css/Posts.css
@@ -1,4 +1,17 @@
 /* Top Component*/
+.postHeader {
+  margin-bottom: 0;
+  font-weight: bolder;
+  font-size: 55px;
+  color: orange;
+}
+
+.post-para {
+  margin-top: 1rem;
+  font-size: 20px;
+  color: white;
+}
+
 .box {
   height: 30px;
   display: flex;
