--- a/frontend/src/css/Users.css
+++ b/frontend/src/css/Users.css
@@ -82,3 +82,50 @@
   width: 25rem;
   margin: 1;
 }
+
+
+.editH1 {
+  text-align: center;
+}
+
+.updateProlifeContainer {
+  padding: 60px;
+}
+
+.edit-image {
+  position: absolute;
+  right: 5%;
+  top: 25%;
+}
+
+.link-to-profile {
+  margin: 1rem;
+}
+
+.submitUpdateProfile {
+  background-color: #0D5C63;
+  border: none;
+  border-radius: 6px;
+  margin: 16px;
+  padding: 6px 12px;
+  color: white;
+}
+
+.editCssPage {
+  margin-top: 7rem;
+  height: 30rem;
+}
+
+.calendar {
+  text-align: center;
+  margin: 1rem;
+}
+
+.deleteTime {
+  margin-left: 1rem;
+  padding: 5px;
+  border: none;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: x-large;
+}
